k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-app
  namespace: inventory  # Specify the custom namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-app
  template:
    metadata:
      labels:
        app: inventory-app
    spec:
      containers:
        - name: inventory-container
          image: inventory-management-system:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: inventory  # Specify the custom namespace
spec:
  type: NodePort
  selector:
    app: inventory-app
  ports:
    - port: 8090
      targetPort: 8090
      nodePort: 30090
